--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="images/android-desktop.png">
+    <link rel="icon" sizes="192x192" href="{{url_for('static', filename = "images/android-desktop.png")}}">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -36,9 +36,8 @@
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
     <meta name="msapplication-TileColor" content="#3372DF">
-    <!-- <meta name="theme-color" content="#263238"> -->
 
-    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="{{url_for('static', filename = "images/favicon.png")}}">
 
     <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
     <!--
@@ -51,7 +50,7 @@
     <link rel="stylesheet" href= {{ url_for('static', filename = 'styles.css')}}>
     <link rel="stylesheet" href={{ url_for('static', filename = 'prism-default.css')}}>
     <link rel="stylesheet" href={{ url_for('static', filename = 'material.min.css')}}>
-    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue_grey-green.min.css" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-green.min.css" />
     <link rel="stylesheet" href={{ url_for('static', filename = 'main.css')}}>
     <style>
     #view-source {
