--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
     <link rel="stylesheet" href= {{ url_for('static', filename = 'styles.css')}}>
     <link rel="stylesheet" href={{ url_for('static', filename = 'prism-default.css')}}>
     <link rel="stylesheet" href={{ url_for('static', filename = 'material.min.css')}}>
-    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-green.min.css" />
+    <link rel="stylesheet" href={{ url_for('static', filename = 'material.indigo-green.min.css')}}>
     <link rel="stylesheet" href={{ url_for('static', filename = 'main.css')}}>
     <style>
     #view-source {
