--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Everything about Yaxin Cheng</title>
+    <title>Cheng's</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -72,7 +72,7 @@
   <div class="docs-layout mdl-layout mdl-js-layout">
     <header class="docs-layout-header mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
     <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-          <h4>Yaxin Cheng</h4><br>
+          <h4><font face="Cochin">YAXIN CHENG</font></h4><br>
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
