Fixed language problem, and add resume file in

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
             <div class="mdl-mega-footer--drop-down-section">
               <input class="mdl-mega-footer--heading-checkbox" type="checkbox" checked>
               <ul class="mdl-mega-footer--link-list">
-                <li><a href="http://web.cs.dal.ca/~ycheng/resume/resume.pdf">Download a PDF version resume as a souvenir?</a></li>
+                <li><a href={{ url_for('static', filename = 'resume.pdf') }}>Download a PDF version resume as a souvenir?</a></li>
                 <br>
                 <li><a href="#">This page is based on Google MDL and redesigned by Yaxin Cheng.<br>Licensed under the Apache License, Version 2.0 (the "License")</a></li>
               </ul>
