--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
     <link rel="stylesheet" href= {{ url_for('static', filename = 'styles.css')}}>
     <link rel="stylesheet" href={{ url_for('static', filename = 'prism-default.css')}}>
     <link rel="stylesheet" href={{ url_for('static', filename = 'material.min.css')}}>
-    <link rel="stylesheet" href={{ url_for('static', filename = 'material.indigo-green.min.css')}}>
+    <link rel="stylesheet" href={{ url_for('static', filename = 'material.blue_grey-indigo.min.css')}}>
     <link rel="stylesheet" href={{ url_for('static', filename = 'main.css')}}>
     <style>
     #view-source {
@@ -72,7 +72,7 @@
   <div class="docs-layout mdl-layout mdl-js-layout">
     <header class="docs-layout-header mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
     <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-          <h4><font face="Cochin">YAXIN CHENG</font></h4><br>
+          <hxyz style="font-size: 37px;"><font face="Georgia, serif">YAXIN CHENG</font></hxyz><br>
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
