Updated font, and resume file

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
   <div class="docs-layout mdl-layout mdl-js-layout">
     <header class="docs-layout-header mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
     <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-          <hxyz style="font-size: 37px;"><font face="Georgia, serif">YAXIN CHENG</font></hxyz><br>
+          <hxyz style="font-size: 37px;"><font face="Arial, Helvetica, sans-serif">YAXIN CHENG</font></hxyz><br>
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
