--- a/templates/overview.html
+++ b/templates/overview.html
@@ -114,7 +114,9 @@
   {% if each["Type"] == 2 %}
     <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--4dp">
     <div class="mdl-card__actions">
-      <iframe src="{{ each["Source"] }}" width="{{ each['width'] }}" height="{{ each['height'] }}" frameborder="0" style="border:0" allowfullscreen></iframe>
+      {{ each['map'].js }}
+      {{ each['map'].html }}
+
     </section>        
    {% endif %}
 {% endfor %}
