Cancel the public entrance of the visitor

--- a/templates/overview.html
+++ b/templates/overview.html
@@ -7,7 +7,7 @@
   <a href="./experience" class="mdl-navigation__link">Experience</a>
   <a href="./contact" class="mdl-navigation__link">Contact Me</a>
   <div class="spacer"></div>
-  <a href="./visitors" class="mdl-navigation__link">Visitors</a>
+  <!-- <a href="./visitors" class="mdl-navigation__link">Visitors</a> -->
 {% elif Subject == "education" %}
 	<a href="./" class="mdl-navigation__link mdl-layout__tab">Overview</a>
   <a href="./education" class="mdl-navigation__link mdl-layout__tab is-active">Education &amp; Skills</a>
@@ -15,7 +15,7 @@
   <a href="./experience" class="mdl-navigation__link">Experience</a>
   <a href="./contact" class="mdl-navigation__link">Contact Me</a>
   <div class="spacer"></div>
-  <a href="./visitors" class="mdl-navigation__link">Visitors</a>
+  <!-- <a href="./visitors" class="mdl-navigation__link">Visitors</a> -->
   {% elif Subject == "projects" %}
   <a href="./" class="mdl-navigation__link mdl-layout__tab">Overview</a>
   <a href="./education" class="mdl-navigation__link">Education &amp; Skills</a>
@@ -23,7 +23,7 @@
   <a href="./experience" class="mdl-navigation__link">Experience</a>
   <a href="./contact" class="mdl-navigation__link">Contact Me</a>
   <div class="spacer"></div>
-  <a href="./visitors" class="mdl-navigation__link">Visitors</a>
+  <!-- <a href="./visitors" class="mdl-navigation__link">Visitors</a> -->
   {% elif Subject == "experience" %}
   <a href="./" class="mdl-navigation__link mdl-layout__tab">Overview</a>
   <a href="./education" class="mdl-navigation__link">Education &amp; Skills</a>
@@ -31,7 +31,7 @@
   <a href="./experience" class="mdl-navigation__link mdl-layout__tab is-active">Experience</a>
   <a href="./contact" class="mdl-navigation__link">Contact Me</a>
   <div class="spacer"></div>
-  <a href="./visitors" class="mdl-navigation__link">Visitors</a>
+  <!-- <a href="./visitors" class="mdl-navigation__link">Visitors</a> -->
   {% elif Subject == "contact" %}
   <a href="./" class="mdl-navigation__link mdl-layout__tab">Overview</a>
   <a href="./education" class="mdl-navigation__link">Education &amp; Skills</a>
@@ -39,7 +39,7 @@
   <a href="./experience" class="mdl-navigation__link">Experience</a>
   <a href="./contact" class="mdl-navigation__link mdl-layout__tab is-active">Contact Me</a>
   <div class="spacer"></div>
-  <a href="./visitors" class="mdl-navigation__link">Visitors</a>
+  <!-- <a href="./visitors" class="mdl-navigation__link">Visitors</a> -->
   {% elif Subject == "visitor" %}
   <a href="./" class="mdl-navigation__link mdl-layout__tab">Overview</a>
   <a href="./education" class="mdl-navigation__link">Education &amp; Skills</a>
@@ -47,7 +47,7 @@
   <a href="./experience" class="mdl-navigation__link">Experience</a>
   <a href="./contact" class="mdl-navigation__link">Contact Me</a>
   <div class="spacer"></div>
-  <a href="./visitors" class="mdl-navigation__link is-active">Visitors</a>
+  <!-- <a href="./visitors" class="mdl-navigation__link is-active">Visitors</a> -->
   {% else %}
   <a href="./" class="mdl-navigation__link mdl-layout__tab">Overview</a>
   <a href="./education" class="mdl-navigation__link">Education &amp; Skills</a>
@@ -55,7 +55,7 @@
   <a href="./experience" class="mdl-navigation__link">Experience</a>
   <a href="./contact" class="mdl-navigation__link">Contact Me</a>
   <div class="spacer"></div>
-  <a href="./visitors" class="mdl-navigation__link">Visitors</a>
+  <!-- <a href="./visitors" class="mdl-navigation__link">Visitors</a> -->
   {% endif %}
 {% endblock %}
 
