--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Yaxin Cheng (Dalhousie University). Computer Science student. Swift and Python fan. This is my web resume, introduction about myself">
+    <meta name="description" content="Web resume for Yaxin Cheng @ Dalhousie University. iOS & Python programmer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yaxin Cheng</title>
 
