--- a/static/styles.css
+++ b/static/styles.css
@@ -15,7 +15,7 @@
  */
 
 html, body {
-  font-family: 'Roboto', 'Helvetica', sans-serif;
+  font-family: 'San Francisco', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -92,8 +92,8 @@ html, body {
   padding: 0px 0px;
   color: inherit;
 }
-.mdl-demo .mdl-card__actions a {
-  color: rgba(83, 109, 254, 1);
+.mdl-demo .mdl-card__actions a {/*Theme colour*/
+  color: rgba(3, 114, 240, 1);
   margin: 0;
 }
 .mdl-demo .mdl-card__actions a:hover,
