--- a/Public/styles/styles.css
+++ b/Public/styles/styles.css
@@ -451,6 +451,17 @@ sfRegular.date {
 	word-break: break-all;
 	max-width: 80%;
 }
+button.link {
+	font-size: 100%;
+	background: #309eda;
+	border: none;
+	color: white;
+	width: 100%;
+	height: 40px;
+	border-bottom-right-radius: 8px;
+	border-bottom-left-radius: 8px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 div.container {
 	text-align: center;
 	padding: 10px 20px;
