--- a/Public/styles/styles.css
+++ b/Public/styles/styles.css
@@ -6,27 +6,33 @@ html, body {
 /* Fonts */
 @font-face {
 	font-family: 'SanFranciscoRegular';
-	src: url('fonts/SF-UI-Display-Regular.ttf');
+	src: url('fonts/SF-UI-Display-Regular.ttf'),
+		url('fonts/SF-UI-Display-Regular.ttf') format("truetype");
 }
 @font-face {
 	font-family: 'SanFranciscoMedium';
-	src: url('fonts/SF-UI-Display-Medium.ttf');
+	src: url('fonts/SF-UI-Display-Medium.ttf'),
+		url('fonts/SF-UI-Display-Medium.ttf') format("truetype");
 }
 @font-face {
 	font-family: 'SanFranciscoSemibold';
-	src: url('fonts/SF-UI-Display-Semibold.ttf');
+	src: url('fonts/SF-UI-Display-Semibold.ttf'),
+		url('fonts/SF-UI-Display-Semibold.ttf') format("truetype");
 }
 @font-face {
 	font-family: 'SanFranciscoBold';
-	src: url('fonts/SF-UI-Display-Bold.ttf');
+	src: url('fonts/SF-UI-Display-Bold.ttf'),
+		url('fonts/SF-UI-Display-Bold.ttf') format("truetype");
 }
 @font-face {
 	font-family: 'SanFranciscoHeavy';
-	src: url('fonts/SF-UI-Display-Heavy.ttf');
+	src: url('fonts/SF-UI-Display-Heavy.ttf'),
+		url('fonts/SF-UI-Display-Heavy.ttf') format("truetype");
 }
 @font-face {
 	font-family: 'SanFranciscoBlack';
-	src: url('fonts/SF-UI-Display-Black.ttf');
+	src: url('fonts/SF-UI-Display-Black.ttf'),
+		url('fonts/SF-UI-Display-Black.ttf') format("truetype");
 }
 cell-header-sfRegular {
 	font-family: "SanFranciscoRegular";
@@ -118,6 +124,7 @@ cell {
 	font-family: "SanFranciscoRegular";
 	font-size: 150%;
 	overflow-y: scroll;
+	-webkit-overflow-scrolling:touch;
 	overflow-x: hidden;
 	-webkit-transition: all .2s;
 	-moz-transition: all .2s;
@@ -135,6 +142,7 @@ cell {
 		font-family: "SanFranciscoRegular";
 		font-size: 150%;
 		overflow-y: scroll;
+		-webkit-overflow-scrolling:touch;
 		overflow-x: hidden;
 		-webkit-transition: all .2s;
 		-moz-transition: all .2s;
@@ -152,6 +160,7 @@ cell {
 		font-family: "SanFranciscoRegular";
 		font-size: 150%;
 		overflow-y: scroll;
+		-webkit-overflow-scrolling:touch;
 		overflow-x: hidden;
 		-webkit-transition: all .2s;
 		-moz-transition: all .2s;
@@ -255,6 +264,7 @@ img.thumbnail {
 	margin-top: 15px;
 	padding-left: 30px;
 	overflow-x: scroll;
+	-webkit-overflow-scrolling:touch;
 	white-space: nowrap;
 	-webkit-transition: all .2s;
 	-moz-transition: all .2s;
@@ -320,6 +330,7 @@ img.thumbnail {
 		margin-top: 15px;
 		padding-left: 5px;
 		overflow-x: scroll;
+		-webkit-overflow-scrolling:touch;
 		white-space: nowrap;
 		-webkit-transition: all .2s;
 		-moz-transition: all .2s;
@@ -385,6 +396,7 @@ img.thumbnail {
 		margin-top: 15px;
 		padding-left: 30px;
 		overflow-x: scroll;
+		-webkit-overflow-scrolling:touch;
 		white-space: nowrap;
 		-webkit-transition: all .2s;
 		-moz-transition: all .2s;
@@ -483,6 +495,7 @@ div.container {
 }
 .scrollView {
 	overflow-x: scroll;
+	-webkit-overflow-scrolling:touch;
 	overflow-y: hidden;
 	height: 15%;
 	white-space: nowrap;
@@ -495,6 +508,7 @@ div.container {
 	}
 	.scrollView {
 		overflow-x: scroll;
+		-webkit-overflow-scrolling:touch;
 		overflow-y: hidden;
 		height: 15%;
 		white-space: nowrap;
