--- a/Public/styles/styles.css
+++ b/Public/styles/styles.css
@@ -638,7 +638,7 @@ a:visited {
 		width: 25%;
 		z-index: 100;
 		right: -30%;
-		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		box-shadow: 10px 0px 0px 0px rgba(0, 0, 0, 0.2), 2px -11px 15px 0px rgba(0, 0, 0, 0.19);
 		background-color: white;
 	    opacity: 0.9;
 	   	-webkit-transition: all .2s;
